# spoq-web-apis

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  railway.toml
docs/: FRONTEND_API_REFERENCE.md  architecture.md  conductor-spec.md  device-expansion-implementation.md  device-expansion.md  hostinger-integration.md
migrations/: 20260118000001_create_users.sql  20260118000002_create_refresh_tokens.sql  20260118000003_create_device_grants.sql  20260118000004_create_user_vps.sql  20260118000005_security_notes.sql  20260119000001_add_dns_record_id.sql  20260120000001_add_device_type.sql  20260120000001_add_registration_fields.sql  20260120000002_add_registration_fields.sql  20260122000001_add_subscription_fields.sql  20260124000001_change_ssh_username_default.sql  20260125000001_add_tunnel_id.sql
scripts/: cleanup-vps-records.sh  local-test.sh  setup-caddy.sh  test-flow.sh  test-spinner.sh
src/: config.rs  db.rs  error.rs  lib.rs  main.rs
src/handlers/: admin.rs  auth.rs  byovps.rs  health.rs  internal.rs  mod.rs  payment.rs  vps.rs  webhooks.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs
src/models/: device_grant.rs  mod.rs  token.rs  user.rs  user_vps.rs
src/services/: cloudflare.rs  device.rs  github.rs  hostinger.rs  mod.rs  (+5 more)
tests/: payment_tests.rs  test_byovps_provisioning.rs  test_cli_script.sh  test_cloudflare.rs  test_config.rs  test_device_flow.rs  test_device_type_migration.rs  test_registration.rs  test_ssh_installer.rs  test_vps_confirm.rs  test_vps_device_type.rs  test_vps_precheck.rs  test_vps_provisioning.rs  webhook_tests.rs
(+1 files in other folders)
